--- a/Homepage.html
+++ b/Homepage.html
@@ -3,5 +3,5 @@
     <h1># Personal-Website</h1>
 <p>Learn about me and what I do</p>
   </body>
-  <a href=https://yutanghe.github.io/TerryTopGroupAssignment2/>Better team website</a>
+  <a href=https://yutanghe.github.io/TerryTopGroupAssignment2/>click here for better team website</a>
 </html>
